--- a/front-end/.gitignore
+++ b/front-end/.gitignore
@@ -1,63 +1,29 @@
-# Node modules
-node_modules/
-
-# Build output
-build/
+# Logs
+logs
 *.log
-
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Coverage directory used by tools like istanbul
-coverage/
-
-# Next.js build output (if using Next.js)
-.next/
-out/
-
-# Nuxt.js build output (if using Nuxt.js)
-.nuxt/
-dist/
-
-# Gatsby files (if using Gatsby)
-.cache/
-public/
-
-# Vuepress build output (if using Vuepress)
-.vuepress/dist/
-
-# Temporary files
-*.tmp
-*.swp
-*.swo
-
-# IDE configuration files
-.idea/
-.vscode/
-
-# OS-specific files
-.DS_Store
-Thumbs.db
+npm-debug.log*
 
 # Dependency directories
+node_modules/
 jspm_packages/
 
-# TypeScript cache (if using TypeScript)
-*.tsbuildinfo
+# Optional npm cache directory
+.npm
 
 # Optional eslint cache
 .eslintcache
 
-# Optional npm cache directory
-.npm/
+# Optional REPL history
+.node_repl_history
 
-# Debug files
-debug/
+# Environment variables file
+.env
 
-# Miscellaneous
-*.tgz
-*.zip
+# MacOS files
+.DS_Store
+
+# Editor directories and files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
